I see this error with the app, reported by NextJS, please fix it. The er

--- a/components.json
+++ b/components.json
@@ -11,10 +11,8 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils",
-    "ui": "@/components/ui",
-    "lib": "@/lib",
+    "components": "@/componentes",
+    "utils": "@/libreria/utilidades",
     "hooks": "@/hooks"
   },
   "iconLibrary": "lucide"
