I see this error with the app, reported by NextJS, please fix it. The er

--- a/components.json
+++ b/components.json
@@ -12,9 +12,7 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/componentes",
-    "utils": "@/libreria/utilidades",
-    "hooks": "@/hooks"
-  },
-  "iconLibrary": "lucide"
+    "components": "src/componentes",
+    "utils": "src/libreria/utilidades"
+  }
 }
