I see this error with the app, reported by NextJS, please fix it. The er

--- a/components.json
+++ b/components.json
@@ -12,7 +12,7 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "src/componentes",
-    "utils": "src/libreria/utilidades"
+    "components": "@/componentes",
+    "utils": "@/libreria/utilidades"
   }
 }
