I see this error with the app, reported by NextJS, please fix it. The er

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,10 @@
         "name": "next"
       }
     ],
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
       "@/*": [
-        "./src/*"
+        "./*"
       ]
     }
   },
