--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,10 +21,7 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/app/*": ["src/app/*"],
-      "@/componentes/*": ["src/componentes/*"],
-      "@/hooks/*": ["src/hooks/*"],
-      "@/libreria/*": ["src/libreria/*"]
+      "@/*": ["src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
