--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,22 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Dependencies
+# dependencies
 /node_modules
 /.pnp
 .pnp.js
-.pnp.loader.mjs
+.yarn/install-state.gz
 
-# Testing
+# testing
 /coverage
 
-# Next.js
+# next.js
 /.next/
 /out/
+
+# production
 /build
 
-# Miscellaneous
+# misc
 .DS_Store
 *.pem
 
@@ -24,14 +26,16 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Local Environment Variables
-.env
+# local env files
 .env*.local
+.env
 
-# Editor directories and files
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# Firebase
+firebase-debug.log
