--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,4 @@
-# Variables de entorno para la configuración de Firebase
-# Copia este archivo a .env y rellena los valores con las credenciales de tu proyecto de Firebase.
-# Puedes encontrar estas credenciales en la configuración de tu proyecto en la consola de Firebase.
-
-# Firebase - Configuración del SDK
-NEXT_PUBLIC_FIREBASE_API_KEY="TU_API_KEY"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="TU_AUTH_DOMAIN"
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="TU_PROJECT_ID"
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="TU_STORAGE_BUCKET"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="TU_MESSAGING_SENDER_ID"
-NEXT_PUBLIC_FIREBASE_APP_ID="TU_APP_ID"
+# Clave secreta para la sesión. Copia este archivo a .env y usa la clave proporcionada.
+# Para producción, deberías generar una nueva clave segura con el comando:
+# node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+SESSION_SECRET=a5b3c7d9e1f2a8b5c4d6e8f1a2b3c4d5e7f8a9b0c1d2e3f4
