--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-# Clave secreta para la sesión. Copia este archivo a .env y usa la clave proporcionada.
-# Para producción, deberías generar una nueva clave segura con el comando:
-# node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 SESSION_SECRET=a5b3c7d9e1f2a8b5c4d6e8f1a2b3c4d5e7f8a9b0c1d2e3f4
+
+# --- Configuración de Base de Datos MySQL ---
+# Copia este archivo a .env y rellena las variables con tus datos.
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=tu_contrasena_aqui
+DB_DATABASE=tecnofarmadb
