--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "embla-carousel-react": "^8.6.0",
     "iron-session": "^8.0.2",
     "lucide-react": "^0.475.0",
+    "mysql2": "^3.10.2",
     "next": "^14.2.5",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
