Me salio este error: Error al obtener todos los movimientos: Error: Acce

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
+# Clave secreta para la sesión de usuario.
+# Puedes generar una nueva o usar esta para desarrollo.
 SESSION_SECRET=a5b3c7d9e1f2a8b5c4d6e8f1a2b3c4d5e7f8a9b0c1d2e3f4
 
-# --- Configuración de Base de Datos MySQL ---
-# Copia este archivo a .env y rellena las variables con tus datos.
+# Configuración de la Base de Datos MySQL
+# Copia este archivo a .env y rellena con tus credenciales.
+# El usuario por defecto en XAMPP es 'root' y la contraseña está vacía.
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=tu_contrasena_aqui
+DB_PASSWORD=
 DB_DATABASE=tecnofarmadb
