--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 9002",
+    "dev": "node -r dotenv/config node_modules/next/dist/bin/next dev -p 9002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
